background to the half side

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <form>
           <label for="name"></label>
           <input tabindex="0" type="email" id="name" name="name">
-          <input type="submit" value="Notify us">
+          <input type="submit" value="Notify me">
         </form>      
     </section>
     <section id="countdown">
