--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <link rel="stylesheet" href="normalize/normalize.css">
   <link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CPoppins:400,500" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CPoppins:400,500" rel="stylesheet"> -->
 
   <meta name="theme-color" content="#fafafa">
 </head>
