--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta charset="utf-8">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175250815-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-XXXXX-Y');
-  </script> -->
+    gtag('config', 'UA-175250815-1');
+  </script>
+
 
   <title>Unmask your Smile</title>
   <meta name="description" content="Unmask is coming soon.">
@@ -110,7 +111,7 @@
     </section> 
 
     <footer>
-      <h5>&copy; 2020 www.unmaskyoursmile.com</h5>  
+      <h5>&copy; 2020 www.unmaskyoursmile.in</h5>  
     </footer>
   
 <script src="normalize/vendor/modernizr-3.11.2.min.js"></script>
@@ -118,11 +119,11 @@
 <script src="main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-<!-- <script>
+<script>
 window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+ga('create', 'UA-175250815-1', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
 </script>
-<script src="https://www.google-analytics.com/analytics.js" async></script> -->
+<script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
