adding the fetch polyfill

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
   
 <script src="normalize/vendor/modernizr-3.11.2.min.js"></script>
 <script src="normalize/plugins.js"></script>
+<script src="https://wzrd.in/standalone/whatwg-fetch@latest"></script>
 <script src="main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
