social media handles added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
           <label for="email"></label>
           <input tabindex="0" type="email" id="email" name="email" placeholder="yourname@google.com">
           <input type="submit" value="Notify me">
-        </form>      
+        </form> 
+        <div id="sm-handles">
+          <a href="https://www.facebook.com/unmaskyoursmile"><div class="sm-icon fb"><img src="img\fb.png"></div></a>
+          <a href="https://www.instagram.com/unmaskyoursmile"><div class="sm-icon insta"><img src="img\insta.png"></div></a>
+          <a href="https://twitter.com/unmaskyoursmile"><div class="sm-icon twitter"><img src="img\twitter.png"></div></a>
+        </div>     
     </section>
     <section id="countdown">
       <div id="clockdiv">
