--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
           <input type="submit" value="Notify me">
         </form> 
         <div id="sm-handles">
-          <a href="https://www.facebook.com/unmaskyoursmile"><div class="sm-icon fb"><img src="img\fb.png"></div></a>
-          <a href="https://www.instagram.com/unmaskyoursmile"><div class="sm-icon insta"><img src="img\insta.png"></div></a>
-          <a href="https://twitter.com/unmaskyoursmile"><div class="sm-icon twitter"><img src="img\twitter.png"></div></a>
+          <a href="https://www.facebook.com/unmaskyoursmile" target="_blank"><div class="sm-icon fb"><img src="img\fb.png"></div></a>
+          <a href="https://www.instagram.com/unmaskyoursmile" target="_blank"><div class="sm-icon insta"><img src="img\insta.png"></div></a>
+          <a href="https://twitter.com/unmaskyoursmile" target="_blank"><div class="sm-icon twitter"><img src="img\twitter.png"></div></a>
         </div>     
     </section>
     <section id="countdown">
