form email required

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <label id= "namelabel" for="name"></label>
           <input type="text" id="name" name="name">
           <label for="email"></label>
-          <input tabindex="0" type="email" id="email" name="email" placeholder="yourname@google.com">
+          <input tabindex="0" type="email" id="email" name="email" placeholder="yourname@google.com" required>
           <input type="submit" value="Notify me">
         </form> 
         <div id="sm-handles">
