--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     gtag('config', 'UA-175250815-1');
   </script>
 
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WSHV7D4');
+  </script>
+  <!-- End Google Tag Manager -->
 
   <title>Unmask your Smile</title>
   <meta name="description" content="Unmask is coming soon.">
@@ -74,6 +82,14 @@
 </head>
 
 <body>
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WSHV7D4"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
     <section id = "data">
       <img id="main-logo" src="img\Unmask Final logo.JPG">
       <header>
@@ -94,9 +110,9 @@
         <small id="submess">Subscribe above to receive exclusive offers & be the first to know.</small>
 
         <div id="sm-handles">
-          <a href="https://www.facebook.com/unmaskyoursmile" target="_blank"><div class="sm-icon fb"><img src="img\fb.png"></div></a>
-          <a href="https://www.instagram.com/unmaskyoursmile" target="_blank"><div class="sm-icon insta"><img src="img\insta.png"></div></a>
-          <a href="https://twitter.com/unmaskyoursmile" target="_blank"><div class="sm-icon twitter"><img src="img\twitter.png"></div></a>
+          <a href="https://www.facebook.com/unmaskyoursmile" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
+          <a href="https://www.instagram.com/unmaskyoursmile" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
+          <a href="https://twitter.com/unmaskyoursmile" target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a>
         </div>     
     </section>
     <section id="countdown">
