events setup in google analytics

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 <body>
 
   <!-- Google Tag Manager (noscript) -->
-  <noscript>
+  <!-- <noscript>
     <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WSHV7D4"
     height="0" width="0" style="display:none;visibility:hidden"></iframe>
-  </noscript>
+  </noscript> -->
   <!-- End Google Tag Manager (noscript) -->
 
     <section id = "data">
@@ -110,9 +110,9 @@
         <small id="submess">Subscribe above to receive exclusive offers & be the first to know.</small>
 
         <div id="sm-handles">
-          <a href="https://www.facebook.com/unmaskyoursmile" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
-          <a href="https://www.instagram.com/unmaskyoursmile" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
-          <a href="https://twitter.com/unmaskyoursmile" target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a>
+          <a href="https://www.facebook.com/unmaskyoursmile" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Facebook]);” target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
+          <a href="https://www.instagram.com/unmaskyoursmile" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Instagram]);” target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
+          <a href="https://twitter.com/unmaskyoursmile" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Twitter]);” target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a>
         </div>     
     </section>
     <section id="countdown">
