--- a/index.html
+++ b/index.html
@@ -119,7 +119,44 @@
           <a href="https://twitter.com/unmaskyoursmile" onclick="ga(‘send’, ‘event’, [Social Media], [Click], [Twitter]);” target="_blank"><div id="twitter-link" class="sm-icon twitter"><img src="img\twitter.png"></div></a> -->
         </div>     
     </section>
-    <section id="countdown">
+
+    <section id="carousel">
+      <div id="button-left" onclick="plusSlides(-1)" class="slider-button">
+        <span> < </span>
+      </div>
+      <div id="button-right" onclick="plusSlides(1)" class="slider-button">
+        <span> > </span>
+      </div>
+      <div id="slide1" class="slider-image-div">
+        <img class="slider-image" src="img\unmask-first-look.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+        A mask that is #madeindia A mask that brings a smile on your face!">
+      </div>
+      <div id="slide2" class="slider-image-div">
+        <img class="slider-image" src="img\unmask-first-transparent-mask.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+        A mask that is #madeindia A mask that brings a smile on your face!">
+      </div>
+      <div id="slide3" class="slider-image-div">
+        <img class="slider-image" src="img\unmask-your-smile.jpg" alt="Introducing UNMASK - A mask which doesn't hide your identity, expressions & smiles.
+        A mask which is safe & reusable.">
+      </div>
+      <div id="slide4" class="slider-image-div">
+        <img class="slider-image" src="img\unmask-long-life.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+        A mask that is #madeindia A mask that brings a smile on your face!">
+      </div>
+      <div id="slide5" class="slider-image-div">
+        <img class="slider-image" src="img\unmask-reusable-filter.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+        A mask that is #madeindia A mask that brings a smile on your face!">
+      </div>
+      <div id="slide6" class="slider-image-div">
+        <img class="slider-image" src="img\unmask-soft-comfortable.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+        A mask that is #madeindia A mask that brings a smile on your face!">
+      </div>
+      <div id="slide7" class="slider-image-div">
+        <img class="slider-image" src="img\unmask-super-breathable.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+        A mask that is #madeindia A mask that brings a smile on your face!">
+      </div>
+    </section>
+    <!-- <section id="countdown">
       <div id="clockdiv">
         <div>
           <span class="days"></span>
@@ -138,7 +175,7 @@
           <div class="smalltext">Seconds</div>
         </div>
       </div>
-    </section> 
+    </section>  -->
 
     <footer>
       <h5>&copy; 2020 www.unmaskyoursmile.in</h5>  
