--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div id="fig-icons">
             <div id="fig-div" onclick="changeZ('anti-fog')">
             <figure class="feature-fig" onclick="changeZ('anti-fog-desc')">
-              <div id="anti-fog" class="img-cont">
+              <div class="img-cont" id="anti-fog">
               <img class="feature-img" src="img\icons\anti-fog.png" alt="&trade; - India's first N95 tranparent level face mask to fight Corona virus is made of material which has anti-fog properties" 
                 onclick="gtag('event', 'Anti-Fog click', {'event_category' : 'Features Click', 'event_label' : 'Anti-Fog Click'});">
               </div>
@@ -140,7 +140,7 @@
             </div>
             <div id="fig-div" onclick="changeZ('anti-microbial')">
             <figure class="feature-fig">
-                <div class="img-cont">
+                <div class="img-cont" id="anti-microbial">
                 <img class="feature-img" src="img\icons\anti-microbial.png" alt="UNAMASK&trade; - India's first N95 tranparent level face mask to fight Corona virus is made of material which has Anti-Microbial properties" 
                 onclick="gtag('event', 'Anti-Microbial click', {'event_category' : 'Features Click', 'event_label' : 'Anti-Microbial Click'});">
                 </div>
@@ -151,7 +151,7 @@
             </div>
             <div id="fig-div" onclick="changeZ('baby-soft')">
             <figure class="feature-fig">
-                <div id="baby-soft" class="img-cont">
+                <div class="img-cont" id="baby-soft">
                 <img class="feature-img" src="img\icons\baby-soft.png" alt="UNAMASK&trade; - India's first N95 level tranparent face mask to fight Corona virus is made of material which has Baby soft. Ultimate care for your skin." 
                 onclick="gtag('event', 'Baby-Soft click', {'event_category' : 'Features Click', 'event_label' : 'Baby-Soft Click'});">
                 </div>
@@ -162,7 +162,7 @@
             </div>
             <div id="fig-div" onclick="changeZ('deaf-mute')">
             <figure class="feature-fig">
-              <div id="deaf-mute" class="img-cont">
+              <div class="img-cont" id="deaf-mute">
               <img class="feature-img" src="img\icons\deaf-mute-friendly.png" alt="UNAMASK&trade; - India's first N95 level tranparent face mask to fight Corona virus is Deaf & Mute friendly. As it allows in expression of Emotions & also aids in Lip-reading." 
                 onclick="gtag('event', 'deaf-mute-friendly click', {'event_category' : 'Features Click', 'event_label' : 'deaf-mute-friendly Click'});">
               </div>
@@ -173,7 +173,7 @@
             </div>
             <div id="fig-div" onclick="changeZ('dehp-free')">
             <figure class="feature-fig">
-              <div id="dehp-free" class="img-cont">
+              <div class="img-cont" id="dehp-free">
               <img class="feature-img" src="img\icons\dehp-free.png" alt="UNAMASK&trade; - India's first N95 level tranparent face mask to fight Corona virus is made of DEHP-free material, in accrodance with Global Standards." 
               onclick="gtag('event', 'DEHP-free click', {'event_category' : 'Features Click', 'event_label' : 'DEHP-free Click'});">
               </div>
@@ -184,7 +184,7 @@
             </div>
             <div id="fig-div" onclick="changeZ('food-grade')">
             <figure class="feature-fig">
-              <div id="food-grade" class="img-cont">
+              <div class="img-cont" id="food-grade">
               <img class="feature-img" src="img\icons\food-grade-material.png" alt="UNAMASK&trade; - India's first N95 level tranparent face mask to fight Corona virus is made of Food Grade material." 
               onclick="gtag('event', 'DEHP-free click', {'event_category' : 'Features Click', 'event_label' : 'DEHP-free Click'});">
               </div>
@@ -288,7 +288,7 @@
             <div id="multiuse-desc" class="feature-desc">
               <h2 class="h2-feature">UNMASK&trade; is truly eco-friendly as it is multiuse friendly. It is Reusable & Recylable.</h2>
             </div>
-            <div id="N95-FFP2-desc" class="feature-desc">
+            <div id="N95-desc" class="feature-desc">
               <h2 class="h2-feature">UNMASK&trade; has the best in grade face-mask with N95 level FFP2 - 5 layer filter, you get the best protection. It protects you from more than 95% airborne microbes & pollutants.</h2>
             </div>
             <div id="reverse-cyclonic-desc" class="feature-desc">
