logo change with tm

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </script> -->
   <!-- End Google Tag Manager -->
 
-  <title>Unmask your Smile</title>
+  <title>Unmask&trade; your Smile</title>
   <meta name="description" content="UNMASK - India's First Transparent Mask. A mask which provides safety & doesn't hide your Smile, Expressions & Identity.">
   <meta name="keywords" content="Transparent Mask, Mask shows smile, Mask, Unmask, Smile, unmask your smile, face mask, N95, N95 mask, mask online, best mask, best N95 mask, corona mask, coronavirus mask, Best mask in India, Best mask of 2020, Wildcraft mask" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -90,9 +90,9 @@
   <!-- End Google Tag Manager (noscript) -->
   <section id="above">
     <section id = "data">
-      <img id="main-logo" src="img\Unmask Final logo.JPG">
+      <img id="main-logo" src="img\cropped-Unmask-Logo-TM.png">
       <header>
-        <h1> Unmask your  
+        <h1> Unmask&trade; your  
           <span class="type-anime" data-elements="Smile, Emotions, Expressions, Identity"></span>
           <span class="cursor-anime">&nbsp;</span>
         </h1>
