proof reading no to now

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <br>
         <br>
         UNMASK&trade; is India's first fully transparent, expressions friendly face-mask with N95 level FFP2 - 5 layer
-       filter for maximum protection against viruses. So no Unmask Your Smile with confidence.</p>
+       filter for maximum protection against viruses. So now Unmask Your Smile with confidence.</p>
         </h1>
         <div id="yt-wrap">
           <iframe id="ytplayer" onclick="gtag('event', 'Video1 click', {'event_category' : 'Video', 'event_label' : 'Video1 Click'});" src="https://www.youtube.com/embed/BEWFUNE3mz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
