new video upload & spelling corrections

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
        filter for maximum protection against viruses. So now Unmask Your Smile with confidence.</p>
         </h1>
         <div id="yt-wrap">
-          <iframe id="ytplayer" onclick="gtag('event', 'Video1 click', {'event_category' : 'Video', 'event_label' : 'Video1 Click'});" src="https://www.youtube.com/embed/BEWFUNE3mz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe id="ytplayer" onclick="gtag('event', 'Video1 click', {'event_category' : 'Video', 'event_label' : 'Video1 Click'});" src="https://www.youtube.com/embed/EzN6NpikZw4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         </main>
         <form name="get-email" href="">
@@ -283,7 +283,7 @@
               <h2 class="h2-feature">UNMASK&trade; is made to the Global Standards. It is made of JIS-Z-2801 approved, japanese standard material.</h2>
             </div>
             <div id="make-in-india-desc" class="feature-desc">
-              <h2 class="h2-feature">UNMASK&trade; is supports the Prime Minister's Aatmanirbhar Abhiyaan & is proudly Made-In-India for the world.</h2>
+              <h2 class="h2-feature">UNMASK&trade; supports the Prime Minister's Aatmanirbhar Abhiyaan & is proudly Made-In-India for the world.</h2>
             </div>
             <div id="multiuse-desc" class="feature-desc">
               <h2 class="h2-feature">UNMASK&trade; is truly eco-friendly as it is multiuse friendly. It is Reusable & Recylable.</h2>
@@ -294,7 +294,7 @@
             <div id="reverse-cyclonic-desc" class="feature-desc">
               <h2 class="h2-feature">UNMASK&trade; uses the Reverse Cyclonic Airflow Effect for Enhanced breathability.</h2>
             </div>
-            <div id="spectacle-friendly-desc" class="feature-desc">
+            <div id="spectacles-friendly-desc" class="feature-desc">
               <h2 class="h2-feature">UNMASK&trade; is designed in such a way that it fits your face perfectly. You can easily wear your glasses with UNMASK&trade;</h2>
             </div>
 </div>
@@ -302,11 +302,11 @@
     </section>
 
     <section id="carousel">
-      <div id="button-left" onclick="plusSlides(-1) gtag('event', 'Carousel-Right-Click', {'event_category' : 'Carousel', 'event_label' : 'Carousel-Right-Click'});" class="slider-button">
-        <span> < </span>
+      <div id="button-left" onclick="plusSlides(-1)" class="slider-button">
+        <span onclick="gtag('event', 'Carousel-Right-Click', {'event_category' : 'Carousel', 'event_label' : 'Carousel-Right-Click'})"> < </span>
       </div>
-      <div id="button-right" onclick="plusSlides(1) gtag('event', 'Carousel-Left-Click', {'event_category' : 'Carousel', 'event_label' : 'Carousel-Left-Click'});" class="slider-button">
-        <span> > </span>
+      <div id="button-right" onclick="plusSlides(1)" class="slider-button">
+        <span onclick="gtag('event', 'Carousel-Left-Click', {'event_category' : 'Carousel', 'event_label' : 'Carousel-Left-Click'})"> > </span>
       </div>
       <div id="slide1" class="slider-image-div">
         <img class="slider-image" src="img\unmask-first-look.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
