--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </h1>
       </header>
       <main>
-        <h1 id="message">This pandemic has robbed us of smiles, expressions & Identity. 
+        <h1 id="message">This pandemic has robbed us of our Superpowers - Smiles, Expressions & Identity. 
           UNMASK&trade; - Coming soon to your doorstep to  bring those smiles back.
         <br>
         <br>
