add about news about smiles & cropped logo

--- a/index.html
+++ b/index.html
@@ -123,8 +123,22 @@
           <a href="https://www.instagram.com/unmaskyoursmile" onclick="gtag('event', 'Insta click', {'event_category' : 'Social Media', 'event_label' : 'Insta Click'});" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
           <a href="https://wa.me/916356016259?text=Hello!%20I%20just%20visited%20your%20website.%20I%20am%20interested%20in%20knowing%20more%20about%20unmask." onclick="gtag('event', 'WhatsApp click', {'event_category' : 'Social Media', 'event_label' : 'WhatsApp Click'});" target="_blank"><div id="whatsapp-link" class="sm-icon whatsapp"><img src="img\whatsapp.png"></div></a>
         </div>
-
-        <div id="features">
+        <section id="why">
+          <h3> Why do we need Transparent Masks?</h3>
+          <a href="https://www.thehindu.com/sci-tech/health/should-we-switch-to-transparent-masks/article32079535.ece" target="_blank">As per this study by "Access Mantra Foundation" & "Sanket Foundation" as published in "The Hindu", more than 73% people struggle in communicating with masks on.</a>
+          <div id="hindu-pie">
+            <img src="img\pie-chart.jpg" alt="Survey showing >73% people find it challenging to communicate with Masks on">
+          </div>
+          <blockquote cite="https://www.thehindu.com/sci-tech/health/should-we-switch-to-transparent-masks/article32079535.ece">
+            “Out of the 850 responses from the bilingual survey (in written English and ISL videos) that we sent out to the community, about 80% of them said it is hard to see the full facial expression with the masks on. With an important component of language missing, this can easily lead to misunderstandings in communication,” 
+          </blockquote>
+          <p id="quote-name"> -Alim via Access Myntra Foundation</p>
+          <br>
+          <h3>Importance of Smiles</h3>
+            <p id="smile-talk">Listen to this amazing talk by Ron Gutman, where he delivers a TED Talk on "The hidden power of smiling."</p>
+          <div style="max-width:854px"><div><iframe src="https://embed.ted.com/talks/ron_gutman_the_hidden_power_of_smiling" style="width:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
+        </section>
+        <section id="features">
           <h1>Features</h1>
           <div id="fig-icons">
             <div id="fig-div" onclick="changeZ('anti-fog')">
@@ -297,8 +311,9 @@
             <div id="spectacles-friendly-desc" class="feature-desc">
               <h2 class="h2-feature">UNMASK&trade; is designed in such a way that it fits your face perfectly. You can easily wear your glasses with UNMASK&trade;</h2>
             </div>
-</div>
-        </div>  
+          </div>
+        </section>  
+
     </section>
 
     <section id="carousel">
