identify, greet, selll & serve with smile added

--- a/index.html
+++ b/index.html
@@ -313,8 +313,47 @@
             </div>
           </div>
         </section>  
-
-    </section>
+        <div id="identity-div" class="img-container">
+          <!-- <a href="/identify-safely-with-transparent-mask"> -->
+          <img class="img-actual" src="img\identification.jpg">
+          <div class="back-overlay"></div>
+          <div class="img-overlay">
+            <h1>Identify yourself Safely</h1>
+            <!-- <p>Read More ></p> -->
+          </div>
+          <!-- </a> -->
+        </div>
+        <div id="greet-div" class="img-container">
+          <!-- <a href="/greet-with-Smile-with-transparent-mask"> -->
+          <img class="img-actual" src="img\greet-with-smile.png">
+          <div class="back-overlay"></div>
+          <div class="img-overlay">
+            <h1>Greet with Smile</h1>
+            <!-- <p>Read More ></p> -->
+          </div>
+          <!-- </a> -->
+        </div>
+        <div id="sell-div" class="img-container">
+          <!-- <a href="/Sell-with-Smile-with-transparent-mask"> -->
+          <img class="img-actual" src="img\sell-with-smile.png">
+          <div class="back-overlay"></div>
+          <div class="img-overlay">
+            <h1>Sell with Smile</h1>
+            <!-- <p>Read More ></p> -->
+          </div>
+          <!-- </a> -->
+        </div>
+        <div id="serve-div" class="img-container">
+          <!-- <a href="/Serve-with-Smile-with-transparent-mask"> -->
+          <img class="img-actual" src="img\serve-with-smile.jpg">
+          <div class="back-overlay"></div>
+          <div class="img-overlay">
+            <h1>Serve with Smile</h1>
+            <!-- <p>Read More ></p> -->
+          </div>
+          <!-- </a> -->
+        </div>
+</section>
 
     <section id="carousel">
       <div id="button-left" onclick="plusSlides(-1)" class="slider-button">
