blog added identity

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en_IN">
 
 <head>
   <meta charset="utf-8">
@@ -314,14 +314,14 @@
           </div>
         </section>  
         <div id="identity-div" class="img-container">
-          <!-- <a href="/identify-safely-with-transparent-mask"> -->
+          <a href=".\blogs\identify-yourself-easily-with-transparent-mask.html">
           <img class="img-actual" src="img\identification.jpg">
           <div class="back-overlay"></div>
           <div class="img-overlay">
             <h1>Identify yourself Safely</h1>
-            <!-- <p>Read More ></p> -->
+            <p>Read More ></p>
           </div>
-          <!-- </a> -->
+          </a>
         </div>
         <div id="greet-div" class="img-container">
           <!-- <a href="/greet-with-Smile-with-transparent-mask"> -->
