--- a/index.html
+++ b/index.html
@@ -97,6 +97,42 @@
           <span class="cursor-anime">&nbsp;</span>
         </h1>
       </header>
+      <section id="carousel">
+        <div id="button-left" onclick="plusSlides(-1)" class="slider-button">
+          <span onclick="gtag('event', 'Carousel-Right-Click', {'event_category' : 'Carousel', 'event_label' : 'Carousel-Right-Click'})"> < </span>
+        </div>
+        <div id="button-right" onclick="plusSlides(1)" class="slider-button">
+          <span onclick="gtag('event', 'Carousel-Left-Click', {'event_category' : 'Carousel', 'event_label' : 'Carousel-Left-Click'})"> > </span>
+        </div>
+        <div id="slide1" class="slider-image-div">
+          <img class="slider-image" src="img\unmask-first-look.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+          A mask that is #madeindia A mask that brings a smile on your face!">
+        </div>
+        <div id="slide2" class="slider-image-div">
+          <img class="slider-image" src="img\unmask-first-transparent-mask.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+          A mask that is #madeindia A mask that brings a smile on your face!">
+        </div>
+        <div id="slide3" class="slider-image-div">
+          <img class="slider-image" src="img\unmask-long-life.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+          Unmask is multi-use & long life.">
+        </div>
+        <div id="slide4" class="slider-image-div">
+          <img class="slider-image" src="img\unmask-reusable-filter.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+          The filter is replacable.">
+        </div>
+        <div id="slide5" class="slider-image-div">
+          <img class="slider-image" src="img\unmask-soft-comfortable.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+          Baby soft & comfortable.">
+        </div>
+        <div id="slide6" class="slider-image-div">
+          <img class="slider-image" src="img\unmask-super-breathable.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
+          Is super breathable.">
+        </div>
+        <div id="slide7" class="slider-image-div">
+          <img class="slider-image" src="img\unmask-your-smile.jpg" alt="Introducing UNMASK - A mask which doesn't hide your identity, expressions & smiles.
+          A mask which is safe & reusable.">
+        </div>
+      </section>
       <main>
         <h1 id="message">This pandemic has robbed us of our Superpowers - Smiles, Expressions & Identity. 
           UNMASK&trade; - Coming soon to your doorstep to  bring those smiles back.
@@ -325,7 +361,7 @@
         </div>
         <div id="greet-div" class="img-container">
           <!-- <a href="/greet-with-Smile-with-transparent-mask"> -->
-          <img class="img-actual" src="img\greet-with-smile.png">
+          <img class="img-actual" src="img\greet-with-smile.jpg">
           <div class="back-overlay"></div>
           <div class="img-overlay">
             <h1>Greet with Smile</h1>
@@ -335,7 +371,7 @@
         </div>
         <div id="sell-div" class="img-container">
           <!-- <a href="/Sell-with-Smile-with-transparent-mask"> -->
-          <img class="img-actual" src="img\sell-with-smile.png">
+          <img class="img-actual" src="img\sell-with-smile.jpg">
           <div class="back-overlay"></div>
           <div class="img-overlay">
             <h1>Sell with Smile</h1>
@@ -355,42 +391,7 @@
         </div>
 </section>
 
-    <section id="carousel">
-      <div id="button-left" onclick="plusSlides(-1)" class="slider-button">
-        <span onclick="gtag('event', 'Carousel-Right-Click', {'event_category' : 'Carousel', 'event_label' : 'Carousel-Right-Click'})"> < </span>
-      </div>
-      <div id="button-right" onclick="plusSlides(1)" class="slider-button">
-        <span onclick="gtag('event', 'Carousel-Left-Click', {'event_category' : 'Carousel', 'event_label' : 'Carousel-Left-Click'})"> > </span>
-      </div>
-      <div id="slide1" class="slider-image-div">
-        <img class="slider-image" src="img\unmask-first-look.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
-        A mask that is #madeindia A mask that brings a smile on your face!">
-      </div>
-      <div id="slide2" class="slider-image-div">
-        <img class="slider-image" src="img\unmask-first-transparent-mask.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
-        A mask that is #madeindia A mask that brings a smile on your face!">
-      </div>
-      <div id="slide3" class="slider-image-div">
-        <img class="slider-image" src="img\unmask-long-life.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
-        Unmask is multi-use & long life.">
-      </div>
-      <div id="slide4" class="slider-image-div">
-        <img class="slider-image" src="img\unmask-reusable-filter.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
-        The filter is replacable.">
-      </div>
-      <div id="slide5" class="slider-image-div">
-        <img class="slider-image" src="img\unmask-soft-comfortable.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
-        Baby soft & comfortable.">
-      </div>
-      <div id="slide6" class="slider-image-div">
-        <img class="slider-image" src="img\unmask-super-breathable.jpg" alt="Introducing UNMASK - India's First Transparent Mask.
-        Is super breathable.">
-      </div>
-      <div id="slide7" class="slider-image-div">
-        <img class="slider-image" src="img\unmask-your-smile.jpg" alt="Introducing UNMASK - A mask which doesn't hide your identity, expressions & smiles.
-        A mask which is safe & reusable.">
-      </div>
-    </section>
+
   </section>
     <!-- <section id="countdown">
       <div id="clockdiv">
