adding greet & sell with smile

--- a/blogs/identify-yourself-easily-with-transparent-mask.html
+++ b/blogs/identify-yourself-easily-with-transparent-mask.html
@@ -15,14 +15,14 @@
   </script>
 
   <title>Identification made easy with transparent mask - UNMASK&trade; </title>
-  <meta name="description" content="Transparent masks make identification easy without having to remove them like regular masks, especially in public places like Airport, Offices, etc... ">
+  <meta name="description" content="Transparent masks make identification easy without having to remove them like regular masks, especially in Airports, Offices & other public places.">
   <meta name="keywords" content="Identification, Transparent Masks, Airport Masks, See through Mask, Identification friendly mask, Security friendly mask" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name= "robots" content="index, follow">
   <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <link rel="canonical" href="https://www.unmaskyoursmile.in/blogs\identify-yourself-easily-with-transparent-mask.html">
+  <link rel="canonical" href="https://www.unmaskyoursmile.in/blogs/identify-yourself-easily-with-transparent-mask.html">
   <meta name="msvalidate.01" content=""> <!--Bing site verification -->
   <meta name="google-site-verification" content="">
   <meta property="fb:admins" content="0" >  <!-- enter your numeric Facebook id number -->
@@ -39,8 +39,8 @@
   <meta property="og:site_name" content="Identify easily - UNMASK&trade;">
   <meta property="og:title" content="UNMASK&trade; - Identification made easy with transparent mask">
   <meta property="og:type" content="Blog">
-  <meta property="og:url" content="https://www.unmaskyoursmile.in/blogs\identify-yourself-easily-with-transparent-mask.html">
-  <meta property="og:description" content="Transparent masks make identification easy without having to remove them like regular masks, especially in public places like Airport, Offices, etc...">
+  <meta property="og:url" content="https://www.unmaskyoursmile.in/blogs/identify-yourself-easily-with-transparent-mask.html">
+  <meta property="og:description" content="Transparent masks make identification easy without having to remove them like regular masks, especially in Airports, Offices & other public places.">
   <meta property="og:image" content="https://unmaskyoursmile.in/android-chrome-512x512.png">
   <meta property="og:image:url" content="https://unmaskyoursmile.in/android-chrome-512x512.png">
   <meta property="og:image:secure_url" content="https://unmaskyoursmile.in/android-chrome-512x512.png">
@@ -59,8 +59,8 @@
   <meta itemprop="author" content="Rhythm">
   <!-- Twitter Cards -->
   <meta name="twitter:title" content="Identify easily - UNMASK&trade; transparent mask"/>
-  <meta name="twitter:url" content="https://www.unmaskyoursmile.in/blogs\identify-yourself-easily-with-transparent-mask.html"/>
-  <meta name="twitter:description" content="Books recommended by people we look up to"/>
+  <meta name="twitter:url" content="https://www.unmaskyoursmile.in/blogs/identify-yourself-easily-with-transparent-mask.html"/>
+  <meta name="twitter:description" content="Transparent masks make identification easy without having to remove them like regular masks, especially in Airports, Offices & other public places."/>
   <meta name="twitter:image" content="https://unmaskyoursmile.in/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:site" content="@unmaskyoursmile"/>
