add sell with smile link to homepage

--- a/index.html
+++ b/index.html
@@ -352,7 +352,6 @@
         <div id="identity-div" class="img-container">
           <a href=".\blogs\identify-yourself-easily-with-transparent-mask.html">
           <img class="img-actual" src="img\identification.jpg">
-          <div class="back-overlay"></div>
           <div class="img-overlay">
             <h1>Identify yourself Safely</h1>
             <p>Read More ></p>
@@ -362,7 +361,6 @@
         <div id="greet-div" class="img-container">
           <a href=".\blogs\greet-with-smile-using-transparent-mask.html">
           <img class="img-actual" src="img\greet-with-smile.jpg">
-          <div class="back-overlay"></div>
           <div class="img-overlay">
             <h1>Greet with Smile</h1>
             <p>Read More ></p>
@@ -370,19 +368,17 @@
           </a>
         </div>
         <div id="sell-div" class="img-container">
-          <!-- <a href="/Sell-with-Smile-with-transparent-mask"> -->
+          <a href=".\blogs\sell-with-smile-using-transparent-mask.html">
           <img class="img-actual" src="img\sell-with-smile.jpg">
-          <div class="back-overlay"></div>
           <div class="img-overlay">
             <h1>Sell with Smile</h1>
-            <!-- <p>Read More ></p> -->
+            <p>Read More ></p>
           </div>
-          <!-- </a> -->
+          </a>
         </div>
         <div id="serve-div" class="img-container">
           <!-- <a href="/Serve-with-Smile-with-transparent-mask"> -->
           <img class="img-actual" src="img\serve-with-smile.jpg">
-          <div class="back-overlay"></div>
           <div class="img-overlay">
             <h1>Serve with Smile</h1>
             <!-- <p>Read More ></p> -->
