adding serve with smile & buttons made more friendly

--- a/index.html
+++ b/index.html
@@ -312,10 +312,16 @@
           </div>
           <div id="feature-desc" >
             <div id="anti-fog-desc" class="feature-desc">
-              <h2 class="h2-feature">UNMASK&trade; is made of material with Anti-Fogging properties.</h2>
+              <h2 class="h2-feature">UNMASK&trade; is made of material with Anti-Fogging properties.</h2> 
+              <p>
+                So fog doesn't hide your smile & keeps it visible to the world. Spread SMILES 
+                with the safety of a mask.
+              </p>
             </div>
             <div id="anti-microbial-desc" class="feature-desc">
-              <h2 class="h2-feature">UNMASK&trade; is made of material with Anti-Microbial properties. It safeguards you from 95% of airbone microbes.</h2>
+              <h2 class="h2-feature">UNMASK&trade; is made of material with Anti-Microbial properties. It 
+              safeguards you from 95% of airbone microbes.</h2>
+              <p>An antimicrobial is an agent that kills microorganisms or stops their growth.</p>
             </div>
             <div id="baby-soft-desc" class="feature-desc">
               <h2 class="h2-feature">UNMASK&trade; is made of material with ultrasoft. We care for your skin.</h2>
@@ -325,6 +331,9 @@
             </div>
             <div id="dehp-free-desc" class="feature-desc">
               <h2 class="h2-feature">UNMASK&trade; is made to the Global Standards. It is made of DEHP-free, European standard material.</h2>
+              <p>DEHP free materials are used in making, IV infusion medication bags, IV lines, catheters, blood bags or 
+                enteral feeding bags and a wide range of tubes as well. UNMASK&trade; is made of similar grade materials.
+              </p>
             </div>
             <div id="food-grade-desc" class="feature-desc">
               <h2 class="h2-feature">UNMASK&trade; is made of the best material following Global Standards. It is made of Food-Grade material which safe for your skin.</h2>
@@ -377,13 +386,13 @@
           </a>
         </div>
         <div id="serve-div" class="img-container">
-          <!-- <a href="/Serve-with-Smile-with-transparent-mask"> -->
+          <a href=".\blogs\serve-with-smile-using-transparent-mask.html">
           <img class="img-actual" src="img\serve-with-smile.jpg">
           <div class="img-overlay">
             <h1>Serve with Smile</h1>
-            <!-- <p>Read More ></p> -->
+            <p>Read More ></p>
           </div>
-          <!-- </a> -->
+          </a>
         </div>
 </section>
 
